errors.txt
In file included from mtl_test.cpp:7:
In file included from ./MTL-4.0.9555-Linux/usr/include/boost/numeric/mtl/mtl.hpp:16:
In file included from ./MTL-4.0.9555-Linux/usr/include/boost/numeric/mtl/types.hpp:17:
In file included from ./MTL-4.0.9555-Linux/usr/include/boost/numeric/mtl/matrices.hpp:26:
./MTL-4.0.9555-Linux/usr/include/boost/numeric/mtl/matrix/ell_matrix.hpp:72:34: warning: unused parameter 'os' [-Wunused-parameter]
    void print_internal(OStream& os) const
                                 ^
1 warning generated.
poisson.cpp:53:17: error: implicit instantiation of undefined template 'std::basic_ifstream<char, std::char_traits<char> >'
  std::ifstream nodes_file(argv[1]);
                ^
/usr/include//c++/4.8/iosfwd:111:11: note: template is declared here
    class basic_ifstream;
          ^
poisson.cpp:61:17: error: implicit instantiation of undefined template 'std::basic_ifstream<char, std::char_traits<char> >'
  std::ifstream tets_file(argv[2]);
                ^
/usr/include//c++/4.8/iosfwd:111:11: note: template is declared here
    class basic_ifstream;
          ^
2 errors generated.
make: *** [poisson.o] Error 1
